syntax = "proto3";
package api;
option go_package = "github.com/h-varmazyar/Gate/api/proto";

enum AuthType {
  None = 0;
  StaticToken = 1;
  UsernamePassword = 2;
}

enum Platform {
  UnknownBrokerage = 0;
  Coinex = 1;
  Nobitex = 2;
}

enum Status {
  Disable = 0;
  Enable = 1;
}

message Auth {
  // @inject_tag: json:"type"
  AuthType Type = 1;
  // @inject_tag: json:"username"
  string Username = 2;
  // @inject_tag: json:"password"
  string Password = 3;
  // @inject_tag: json:"access_id"
  string AccessID = 4;
  // @inject_tag: json:"secret_key"
  string SecretKey = 5;
}

message Void {
}