syntax = "proto3";
package brokerageApi;
option go_package = "github.com/mrNobody95/Gate/services/brokerage/api";
import "api/src/misc.proto";

service WalletService {
  rpc List(api.Void) returns (Wallets);
}

message Wallet {
  // @inject_tag: json:"reference_currency_balance"
  float ReferenceCurrencyBalance = 1;
  // @inject_tag: json:"blocked_balance"
  float BlockedBalance = 2;
  // @inject_tag: json:"active_balance"
  float ActiveBalance = 3;
  // @inject_tag: json:"total_balance"
  float TotalBalance = 4;
  // @inject_tag: json:"asset"
  string Asset = 5;
  // @inject_tag: json:"id"
  string ID = 6;
}

message Wallets {
  // @inject_tag: json:"wallets"
  repeated Wallet Wallets = 1;
}